change code overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1847,7 +1847,7 @@ pre {
 
 :not(pre) > code {
   padding: 2px 4px;
-  font-size: 90%;
+  font-size: 75%;
   color: #c7254e;
   background-color: #f9f2f4;
   white-space: normal;
